ADD: user variable to add his own modules FIX #17

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,3 +24,7 @@ httpd_openssl_key: "{{ httpd_openssl_key_directory }}/apache-httpd.key"
 
 # If the "it works" page should be kept
 httpd_remove_example: no
+
+# Additionnal httpd module to install
+
+httpd_additionnal_modules: []
