--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -28,3 +28,6 @@ httpd_remove_example: no
 # Additionnal httpd module to install
 
 httpd_additionnal_modules: []
+
+apache_global_vhost_settings: |
+  DirectoryIndex index.php index.html
