--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -163,7 +163,7 @@
       - httpd_remove_example is boolean
     quiet: yes
 
-- name: Test if httpd_additionnal_modules is set correctly
+- name: assert | Test if httpd_additionnal_modules is set correctly
   ansible.builtin.assert:
     that:
       - httpd_additionnal_modules is defined
