[ADD]variable to activate modules for Debian Family

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -29,6 +29,8 @@ httpd_remove_example: no
 
 httpd_additionnal_modules: []
 
+httpd_custom_modules_to_activate_with_command: []
+
 apache_global_vhost_settings: |
   DirectoryIndex index.php index.html
 
