--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
 
 - name: Import assert.yml
   ansible.builtin.import_tasks: assert.yml
-  run_once: yes
+  run_once: true
   delegate_to: localhost
 
 - name: Install apache httpd
@@ -44,6 +44,16 @@
   notify:
     - Test httpd configuration validity
     - Restart httpd
+
+- name: Activate httpd module | Debian
+  ansible.builtin.command:
+    cmd: "a2enmod {{ item }}"
+  changed_when: no
+  loop: "{{ httpd_modules_to_activate_with_command }}"
+  when:
+    - ansible_os_family == 'Debian'
+  notify:
+    - Test httpd configuration validity
 
 - name: Import ssl.yml
   ansible.builtin.import_tasks: ssl.yml
