--- a/tasks/vhosts.yml
+++ b/tasks/vhosts.yml
@@ -15,7 +15,7 @@
 - name: vhosts | Configure vhosts
   ansible.builtin.template:
     src: "{{ vhost_conf_template }}"
-    dest: "{{ httpd_config_directory }}/{{ item.name }}.conf"
+    dest: "{{ httpd_vhosts_directory }}/{{ item.name }}.conf"
     mode: "0644"
   loop: "{{ httpd_vhosts }}"
   loop_control:
