--- a/vars/main.yml
+++ b/vars/main.yml
@@ -20,6 +20,14 @@ _httpd_packages:
 
 httpd_packages: "{{ httpd_additionnal_modules + _httpd_packages[ansible_os_family] | default(_httpd_packages['default']) }}"
 
+_httpd_modules_to_activate_with_command:
+  default: []
+  Debian:
+    - proxy
+    - proxy_http
+
+httpd_modules_to_activate_with_command: "{{ httpd_custom_modules_to_activate_with_command + _httpd_modules_to_activate_with_command[ansible_os_family] | default(_httpd_modules_to_activate_with_command['default']) }}"
+
 _httpd_ssl_packages:
   default:
     - mod_ssl
