duplition of key quiet

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -31,16 +31,16 @@ jobs:
         config:
           - image: "enterpriselinux"
             tag: "8"
+          - image: "enterpriselinux"
+            tag: "latest"
           - image: "debian"
             tag: "latest"
           - image: "debian"
-            tag: "bookworm"
+            tag: "bullseye"
           - image: "fedora"
-            tag: "36"
+            tag: "37"
           - image: "fedora"
             tag: "latest"
-          - image: "fedora"
-            tag: "rawhide"
           - image: "opensuse"
             tag: "latest"
           - image: "ubuntu"
