--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,6 +11,7 @@ galaxy_info:
     - name: EL
       versions:
         - "8"
+        - "9"
     - name: Debian
       versions:
         - all
@@ -30,5 +31,7 @@ galaxy_info:
     - httpd
     - installer
     - package
+    - system
+    - networking
 
 dependencies: []
