--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -5,4 +5,4 @@
 repository:
   description: Install and configure httpd on your system.
   homepage: https://robertdebock.nl/
-  topics: webserver, apache, httpd, installer, package, ansible, molecule, tox, playbook
+  topics: webserver, apache, httpd, installer, package, system, networking, ansible, molecule, tox, playbook
