--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,16 +14,16 @@ molecule:
     matrix:
       - image: "enterpriselinux"
         tag: "8"
+      - image: "enterpriselinux"
+        tag: "latest"
       - image: "debian"
         tag: "latest"
       - image: "debian"
-        tag: "bookworm"
+        tag: "bullseye"
       - image: "fedora"
-        tag: "36"
+        tag: "37"
       - image: "fedora"
         tag: "latest"
-      - image: "fedora"
-        tag: "rawhide"
       - image: "opensuse"
         tag: "latest"
       - image: "ubuntu"
