--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -4,6 +4,7 @@
     that:
       - httpd_servername is defined
       - httpd_servername is string
+      - httpd_servername is not none
     quiet: yes
 
 - name: assert | Test if httpd_port is set correctly
@@ -27,6 +28,7 @@
     that:
       - httpd_ssl_servername is defined
       - httpd_ssl_servername is string
+      - httpd_ssl_servername is not none
     quiet: yes
 
 - name: assert | Test if httpd_ssl_port is set correctly
@@ -52,10 +54,13 @@
     that:
       - item.name is defined
       - item.name is string
+      - item.name is not none
       - item.location is defined
       - item.location is string
+      - item.location is not none
       - item.backend_url is defined
       - item.backend_url is string
+      - item.backend_url is not none
     quiet: yes
   loop: "{{ httpd_locations }}"
   loop_control:
@@ -76,6 +81,7 @@
     that:
       - item.name is defined
       - item.name is string
+      - item.name is not none
       - item.servername is defined
       - item.servername is string
     quiet: yes
@@ -121,9 +127,10 @@
   ansible.builtin.assert:
     that:
       - item.name is defined
-      - item.name is string
+      - item.name is not none
       - item.path is defined
       - item.path is string
+      - item.path is not none
       - item.option is defined or item.allow_override is defined
     quiet: yes
   loop: "{{ httpd_directories }}"
@@ -148,6 +155,7 @@
   ansible.builtin.assert:
     that:
       - item.allow_override is string
+      - item.allow_override is not none
     quiet: yes
   loop: "{{ httpd_directories }}"
   loop_control:
