--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -34,6 +34,7 @@ httpd_custom_modules_to_activate_with_command: []
 apache_global_vhost_settings: |
   DirectoryIndex index.php index.html
 
+# Template to uses for vhosts. Usefull to override the conf by your own setup.
 vhost_conf_template: vhost.conf.j2
 
 default_vhost_conf: default_vhost.conf
