--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -9,6 +9,7 @@
     - role: robertdebock.epel
     - role: robertdebock.buildtools
     - role: robertdebock.python_pip
+      python_pip_update: false
     - role: robertdebock.openssl
       openssl_items:
         - name: apache-httpd
