--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -9,7 +9,7 @@
     - ../../defaults/main.yml
 
   roles:
-    - role: ansible-role-httpd
+    - role: robertdebock.httpd
       # https_ssl_enable: true
       httpd_port: 8080
       httpd_ssl_port: 8443
