--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -56,13 +56,13 @@
       #     servername: nodocroot.example.com
       #     documentroot: /var/www/html/nodocroot
       #     create_docroot: false
-        - name: my_vhost_with_locations
-          servername: my_vhost_with_locations.example.com
-          locations:
-            - location: /my_location
-              backend_url: "http://localhost:8080/myapplication"
-            - location: /my_location2
-              backend_url: "http://localhost:8080/myapplication2"
+      #   - name: my_vhost_with_locations
+      #     servername: my_vhost_with_locations.example.com
+      #     locations:
+      #       - location: /my_location
+      #         backend_url: "http://localhost:8080/myapplication"
+      #       - location: /my_location2
+      #         backend_url: "http://localhost:8080/myapplication2"
       httpd_directories:
         - name: my_directory
           path: "{{ httpd_data_directory }}/my_directory"
