--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -87,7 +87,8 @@
       httpd_directories:
         - name: my_directory
           path: "{{ httpd_data_directory }}/my_directory"
-          # options:
-          #   - Indexes
-          #   - FollowSymLinks
+          options:
+            - Indexes
+            - FollowSymLinks
           allow_override: All
+          require: all granted
