--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -85,12 +85,13 @@
       #     custom_log: /var/log/httpd/my_vhost_with_error_log_and_custom_log.example.com-access.log combined
       #   - name: my_vhost_with_directory
       #     servername: my_vhost_with_directory.example.com
-      #     directory: "{{ httpd_data_directory }}/my_vhost_with_directory"
-      #     options:
-      #       - Indexes
-      #       - FollowSymLinks
-      #     allow_override: All
-      #     require: all granted
+      #     directories:
+      #       - path: "{{ httpd_data_directory }}/my_vhost_with_directory"
+      #         options:
+      #           - Indexes
+      #           - FollowSymLinks
+      #         allow_override: All
+      #         require: all granted
 
       httpd_directories:
         - name: my_directory
