--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -18,6 +18,10 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
       - name: ansible-lint
         uses: ansible/ansible-lint@main
 
