--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -14,14 +14,10 @@ on:
 
 jobs:
   lint:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: checkout
         uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
       - name: ansible-lint
         uses: ansible/ansible-lint@main
 
